--- a/src/components/ProjectsSlider.astro
+++ b/src/components/ProjectsSlider.astro
@@ -33,7 +33,7 @@ const projects = unsortedProjects.sort((a, b) => {
             achievements={project.data.achievements}
             assets={project.data.assets}
             index={index}
-            total={projects.length}
+            transparency={project.data.transparency}
           />
         ))
       }
