:fire: Started footer section, finished call to action, missing final footer with contact

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -2,7 +2,7 @@
 import RotatingStamp from "./RotatingStamp.astro"
 ---
 
-<section class="about-section invert-area">
+<section id="about-section" class="about-section invert-area">
   <div class="inner-container">
     <h2 class="title-about">About Me</h2>
     <RotatingStamp />
