--- a/src/components/ProjectSlide.astro
+++ b/src/components/ProjectSlide.astro
@@ -57,7 +57,7 @@ const bottomAssets = mappedAssets.slice(2, 4)
                     <a
                       href={achievement.URL}
                       target="_blank"
-                      class="slide__link hoverable bg-transparent hover:bg-orange-500 border border-solid border-white hover:border-orange-500 text-white px-2 py-1 mt-2 rounded-full transition-colors ease-in-out duration-300"
+                      class="slide__link hoverable line-clamp-1 w-fit bg-transparent hover:bg-orange-500 border border-solid border-white hover:border-orange-500 text-white px-2 py-1 mt-2 rounded-full transition-colors ease-in-out duration-300"
                     >
                       {" "}
                       {achievement.achievement}{" "}
@@ -164,7 +164,7 @@ const bottomAssets = mappedAssets.slice(2, 4)
     .slide__content {
       @apply absolute top-0 left-0 w-full h-full flex flex-row justify-between p-4 pt-0 lg:pt-16 lg:p-10 text-white z-20;
       .left-side {
-        @apply flex flex-col justify-between mb-8;
+        @apply flex flex-col justify-between mb-8 w-full lg:w-fit;
         .overview {
           @apply mb-4;
           .slide__description {
