--- a/src/components/ProjectsSlider.astro
+++ b/src/components/ProjectsSlider.astro
@@ -350,7 +350,7 @@ const projects = unsortedProjects.sort((a, b) => {
 <style>
   @reference "../styles/global.css";
   .projects-slider {
-    @apply bg-black overflow-hidden;
+    @apply bg-black overflow-hidden relative z-2;
     @variant lg {
       overflow: unset;
     }
