--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
+import 'lenis/dist/lenis.css'
 import About from '../components/About.astro';
 import Hero from '../components/Hero.astro';
-import Spacer from '../components/Padding.astro';
 import ProjectsSlider from '../components/ProjectsSlider.astro';
 import Layout from '../layouts/Layout.astro';
 
