:fire: updated Resume and made some responsiveness updates

--- a/src/components/AboutTransition.astro
+++ b/src/components/AboutTransition.astro
@@ -85,7 +85,7 @@
 <style>
   @reference "../styles/global.css";
   .about-transition {
-    @apply relative w-full h-full overflow-hidden z-1;
+    @apply relative w-full max-w-site h-full overflow-hidden z-1;
     .element {
       @apply absolute;
       &.bg {
