--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -75,7 +75,7 @@ import DialZoom from "./DialZoom.astro"
           </a>
           <a
             class="hoverable"
-            href="https://www.linkedin.com/in/gustavo-gomez-selva-7000621b7"
+            href="https://www.linkedin.com/in/gustavogomez092"
             target="_blank"
             rel="noopener noreferrer"
           >
@@ -329,7 +329,7 @@ import DialZoom from "./DialZoom.astro"
           @apply bg-slate-200 flex flex-col lg:flex-row justify-center items-center space-y-4 space-x-0 lg:space-x-6 z-30;
           @apply col-span-4 lg:col-span-2 col-start-1 row-start-3 lg:row-start-5;
           .image-section {
-            @apply h-24 w-24;
+            @apply max-h-24 max-w-24 w-auto h-full aspect-square;
             img {
               @apply rounded-full w-full h-full object-cover object-top;
             }
